2005-09-29  Paul Eggert  <eggert@CS.UCLA.EDU>
	    Derek Price  <derek@ximbiot.com>

	* client.c (handle_m, handle_e): Remove incomplete workaround for
	O_NONBLOCK problem; no longer needed because of the fix below.
	(start_rsh_server): We need the O_NONBLOCK fix, so pass 'true' to
	piped_child to enable the workaround.
	* cvs.h (piped_child): New bool argument saying whether O_NONBLOCK
	fix is needed.  All uses changed.
	* run.c (work_around_openssh_glitch): New function.
	(piped_child): Use it if the fix is requested.  Avoid call call to
	vfork with undefined behavior.

2005-09-26  Conrad T. Pino  <Conrad@Pino.com>

	* rcs.c: Use "#ifdef HAVE_FSYNC" just like every where else.

2005-09-25  Derek Price  <derek@ximbiot.com>

	* rcs.c (rcs_internal_unlockfile): Fsync files before renaming them.
	Patch from Rahul Bhargava <rahul@wandisco.com>.

2005-09-24  Derek Price  <derek@ximbiot.com>

	* update.c (merge_file): Check for RCS_checkout errors.

2005-09-23  Larry Jones  <lawrence.jones@ugs.com>

	* checkout.c (export_usage): Note that -r requires a tag.

2005-09-22  Larry Jones  <lawrence.jones@ugs.com>

	* patch.c (patch_usage): Document -k option.

2005-09-22  Derek Price  <derek@ximbiot.com>

	* classify.c (Classify_File): If a file had a conflict and the
	timestamp hasn't changed, it still has a conflict.  Add comment about
	how T_MODIFIED could later turn out to have conflict markers and why
	it should not be checked in this function.
	* client.c (send_fileproc): Don't send contents for files known to have
	conflicts unless this is for `cvs diff'.
	* commit.c (check_fileproc): T_CONFLICT should be handled like
	T_MODIFIED, since force could be requested.  Simplify logic since
	T_CONFLICT can now be trusted.
	* cvs.h (file_has_conflict): Remove proto.
	* rcs.c (RCS_Checkout): Comment noexec behavior in header block.
	* server.c (serve_unchanged, serve_is_modified): Handle conflicts.
	* status.c (status_fileproc): Trust T_CONFLICT to simplify.