@@ -140,7 +140,7 @@ expand_path (name, file, line)
 		    expand_string (&mybuf, &mybuf_size, p + 1);
 		    mybuf[p++] = name[s];
 		}
-		if (name[s] == '}') ++s;
+		if (name[s] != '\0') ++s;
 	    }
 	    else
 	    {
@@ -202,18 +202,18 @@ expand_path (name, file, line)
 	    else
 		error (0, 0, "%s:tilde expansion not supported on this system",
 		       file);
-	    return NULL;
+	    goto error_exit;
 #else
 	    struct passwd *ps;
 	    ps = getpwnam (buf + d);
-	    if (ps == 0)
+	    if (ps == NULL)
 	    {
 		if (line != 0)
 		    error (0, 0, "%s:%d: no such user %s",
 			   file, line, buf + d);
 		else
 		    error (0, 0, "%s: no such user %s", file, buf + d);
-		return NULL;
+		goto error_exit;
 	    }
 	    e = ps->pw_dir;
 #endif
